<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_secondary"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_rename_title"
        android:textAppearance="@style/TextAppearance.AzizGraphics.Headline2"
        android:textColor="@color/text_primary" />

    <EditText
        android:id="@+id/edit_text_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_rename_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:backgroundTint="@color/primary"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AzizGraphics.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textColor="@color/text_secondary"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Widget.AzizGraphics.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/primary"/>

    </LinearLayout>

</LinearLayout>
