<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_secondary"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="File Options"
        android:textAppearance="@style/TextAppearance.AzizGraphics.Headline2"
        android:textColor="@color/text_primary" />

    <Button
        android:id="@+id/btn_rename"
        style="@style/Widget.AzizGraphics.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_file"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/background_tertiary"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_pin_unpin"
        style="@style/Widget.AzizGraphics.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_file"
        android:textColor="@color/text_primary"
        android:backgroundTint="@color/background_tertiary"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_delete"
        style="@style/Widget.AzizGraphics.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:textColor="@color/error"
        android:backgroundTint="@color/background_tertiary"/>

</LinearLayout>
